--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"  />
   <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
 
   <!-- Modernizr file
   =================== -->
@@ -43,16 +44,16 @@
 
   <!-- Splash Screen
   ================== -->
-  <div id="splash"></div>
+<!--  <div id="splash"></div>-->
 
   <!-- Website Logo
   ================= -->
   <section id="logo">
-    <div class="container text-center wow pulse">
-      <img src="images/logo-white.svg" alt="logo" />
-      <br />
-      <h1>Recipe Book</h1>
-    </div>
+<!--    <div class="container text-center wow pulse">-->
+<!--      <img src="images/logo-white.svg" alt="logo" />-->
+<!--      <br />-->
+<!--      <h1>Recipe Book</h1>-->
+<!--    </div>-->
   </section>
 
   <!-- Recipes Categories
@@ -65,194 +66,228 @@
         </div>
       </div>
       <div class="row wow zoomIn">
-        <!-- Breakfast - Category Item -->
+        <!-- Vegetarian - Category Item -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
           <div class="category-item text-center">
-            <img src="images/icons/milk.png" alt="milk" width="48" height="48" />
+           <a href = #veg-section>
+            <img src="images/icons/leaf.png" alt="vegan" width="48" height="48" />
+           </a>
             <br />
-            Breakfast
-          </div>
-        </div>
-        <!-- Meat - Category Item -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-          <div class="category-item text-center">
-            <img src="images/icons/steak.png" alt="meat" width="48" height="48" />
-            <br />
-            Meat
-          </div>
-        </div>
-        <!-- Seafood - Category Item -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-          <div class="category-item text-center">
-            <img src="images/icons/fish.png" alt="fish" width="48" height="48" />
-            <br />
-            Sea food
+            Vegetarian
           </div>
         </div>
         <!-- Snacks- Category Item -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
           <div class="category-item text-center">
-            <img src="images/icons/peanuts.png" alt="peanuts" width="48" height="48"/>
+            <a href = #snack-section>
+             <img src="images/icons/peanuts.png" alt="peanuts" width="48" height="48"/>
+            </a>
             <br />
             Snacks
           </div>
         </div>
-        <!-- Spicy - Category Item -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
           <div class="category-item text-center">
-            <img src="images/icons/chili.png" alt="chili" width="48" height="48" />
+            <a href = #bakery-section>
+            <img src="images/icons/milk.png" alt="milk" width="48" height="48" />
+            </a>
             <br />
-            Spicy
+            Bakery
           </div>
         </div>
-        <!-- Vegetarian - Category Item -->
-        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
           <div class="category-item text-center">
-            <img src="images/icons/vegan.png" alt="vegan" width="48" height="48" />
+             <a href = #beverage-section>
+              <i class="fa fa-mug-hot fa-2x"></i>
+             </a>
             <br />
-            Vegetarian
+            Beverages
           </div>
         </div>
       </div>
-      <div class="row wow zoomIn">
-        <div class="col-12 text-center show-all">
-          <div class="category-item text-center">
-            <i class="fa fa-cutlery fa-2x" aria-hidden="true"></i>
-            <br />
-            Show All
-          </div>
-        </div>
-      </div>
+<!--      <div class="row wow zoomIn">-->
+<!--        <div class="col-12 text-center show-all">-->
+<!--          <div class="category-item text-center">-->
+<!--            <i class="fa fa-cutlery fa-2x" aria-hidden="true"></i>-->
+<!--            <br />-->
+<!--            Show All-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
   </section>
 
   <!-- Recipes Items
   ================== -->
-  <section id="items">
+  <section id="veg-section">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>Recipes</h2>
+          <h2 style="color: white;"><b>Vegetarian Recipes</b></h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- First recipe item -->
+        <div class=" col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+<!--          <div class="recipe-item text-center">-->
+            <a href="vegetarian/pongal.html" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+<!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
+              <h3>Ven Pongal</h3>
+            </a>
+<!--          </div>-->
+        </div>
+        <!-- Second recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="vegetarian/sweetpongal.html" style='width:100%;background-color:#a3276e' class="btn btn-primary" role="button">
+              <h3>Sweet Pongal</h3>
+            </a>
+        </div>
+        <!-- Third recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#" style="width:100%;background-color: #1b662c;" class="btn btn-success" role="button">
+              <h3>Rasam</h3>
+            </a>
+        </div>
+        <!-- Fourth recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#"  style="width:100%;" class="btn btn-danger" role="button" style="width:100%">
+              <h3>Moong Dal</h3>
+            </a>
+        </div>
+        <!-- Fifth recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#"  style="width:100%;" class="btn btn-warning" role="button"  style="width:100%">
+              <h3>Matar Paneer</h3>
+            </a>
+        </div>
+        <!-- Sixth recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#" style="width:100%;"  class="btn btn-info" role="button"  style="width:100%">
+              <h3>Palak Paneer</h3>
+            </a>
+        </div>
+        <!-- Seventh recipe item -->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="#"  style="width:100%;" class="btn btn-primary" role="button"  style="width:100%">-->
+<!--              <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Eight recipe item &ndash;&gt;-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html"  style="width:100%;" class="btn btn-secondary" role="button"  style="width:100%">-->
+<!--              <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Ninth recipe item &ndash;&gt;-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html"  style="width:100%;"  class="btn btn-success" role="button"  style="width:100%">-->
+<!--              <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+      </div>
+    </div>
+  </section>
+  <section id="snack-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 style="color: white;">Snack Recipes</h2>
         </div>
       </div>
       <div class="row">
         <!-- First recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
+            <a href="#"  style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+<!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
+                          <h3>Boondi Ladoo</h3>
             </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
         </div>
         <!-- Second recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
+            <a href="#" style='width:100%;background-color:#a3276e' class="btn btn-primary" role="button" >
+<!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
+                <h3>Peanut Ladoo</h3>
             </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
         </div>
         <!-- Third recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
+            <a href="snacks/kaju-katli.html"  style="width:100%;background-color:#1b662c;" class="btn btn-success" role="button" >
+                          <h3>Kaju Katli</h3>
             </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Fourth recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Fifth recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Sixth recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Seventh recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Eight recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
-        </div>
-        <!-- Ninth recipe item -->
-        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-          <div class="recipe-item text-center">
-            <a href="recipe.html">
-              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />
-            </a>
-            <br />
-            <h3>Barbecue Pork Ribs</h3>
-          </div>
         </div>
       </div>
     </div>
   </section>
-
+  <section id="bakery-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 style="color: white;">Bakery Recipes</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- First recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+                <h3>Banana Bread</h3>
+            </a>
+        </div>
+        <!-- Second recipe item -->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html" style='width:100%;background-color:#a3276e' class="btn btn-primary bg-black" role="button">-->
+<!--               <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+        <!-- Third recipe item -->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html"  style="width:100%;background-color: #1b662c;" class="btn btn-success">-->
+<!--               <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+      </div>
+    </div>
+  </section>
+  <section id="beverage-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 style="color: white;">Beverage Recipes</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- First recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="#" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+                <h3>Mocha Cookie Crumble</h3>
+            </a>
+        </div>
+<!--        &lt;!&ndash; Second recipe item &ndash;&gt;-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html" style='width:100%;background-color:#a3276e' class="btn btn-primary bg-black" role="button">-->
+<!--               <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Third recipe item &ndash;&gt;-->
+<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
+<!--            <a href="recipe.html"  style="width:100%;background-color: #1b662c;" class="btn btn-success">-->
+<!--               <h3>Barbecue Pork Ribs</h3>-->
+<!--            </a>-->
+<!--        </div>-->
+      </div>
+    </div>
+  </section>
   <!-- Website Footer
   =================== -->
   <footer>
     <div class="container">
-      <div class="row">
-        <!-- About -->
-        <div class="col-md-6 col-sm-12 text-center">
-          <h3>About</h3>
-          <div class="footer-about">
-            "A recipe book is one that you use daily and what we in our family
-            call 'a living book' — a book that you use all the time,
-            not just read once and discard on the shelf.
-            Recipes are by nature derivative and meant to be shared -
-            that is how they improve, are changed, how new ideas are formed. ”
-          </div>
-        </div>
+      <div class="row" style="height:36px">
         <!-- Author -->
-        <div class="col-md-6 col-sm-12 text-center">
+        <div class="col-md-12 col-sm-12 text-center">
           <div class="footer-author">
             Made with
             <i class="fa fa-heart" aria-hidden="true"></i>
             love by
-            <a href="https://jraleman.com/" target="_blank">Jose Ramon</a>.
+            <a href="#" target="_blank">Foodie</a>.
           </div>
         </div>
       </div>
