--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
       </div>
     </div>
   </section>
+  <section id="line1">
+    <div class="container">
+        <div class="divider py-1" style='background-color:#FF7D33'></div>
+        <div class="divider bg-dark py-1" ><hr></div>
+    </div>
+  </section>
   <section id="snack-section">
     <div class="container">
       <div class="row">
@@ -218,6 +224,12 @@
       </div>
     </div>
   </section>
+  <section id="line2">
+    <div class="container">
+        <div class="divider py-1" style='background-color:#FF7D33'></div>
+        <div class="divider bg-dark py-1" ><hr></div>
+    </div>
+  </section>
   <section id="bakery-section">
     <div class="container">
       <div class="row">
@@ -245,6 +257,12 @@
 <!--            </a>-->
 <!--        </div>-->
       </div>
+    </div>
+  </section>
+  <section id="line3">
+    <div class="container">
+        <div class="divider py-1" style='background-color:#FF7D33'></div>
+        <div class="divider bg-dark py-1" ><hr></div>
     </div>
   </section>
   <section id="beverage-section">
@@ -286,7 +304,7 @@
           <div class="footer-author">
             Made with
             <i class="fa fa-heart" aria-hidden="true"></i>
-            love by
+            love by a
             <a href="#" target="_blank">Foodie</a>.
           </div>
         </div>
