added reciepe for mattar paneer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Recipe Book</title>
+  <title>Cookbook</title>
 
   <!-- Favicon
   ============ -->
@@ -156,7 +156,7 @@
         </div>
         <!-- Fifth recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#"  style="width:100%;" class="btn btn-warning" role="button"  style="width:100%">
+            <a href="vegetarian/mattar-paneer.html"  style="width:100%;" class="btn btn-warning" role="button"  style="width:100%">
               <h3>Matar Paneer</h3>
             </a>
         </div>
