--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cookbook</title>
 
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="red">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Cookbook">
+
   <!-- Favicon
   ============ -->
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
