added moong dal reciepe

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <!-- Fourth recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#"  style="width:100%;" class="btn btn-danger" role="button" style="width:100%">
+            <a href="vegetarian/moong-dal.html"  style="width:100%;" class="btn btn-danger" role="button" style="width:100%">
               <h3>Moong Dal</h3>
             </a>
         </div>
