added moong dal recipe

--- a/vegetarian/moong-dal.html
+++ b/vegetarian/moong-dal.html
@@ -111,8 +111,8 @@
               <dt>&frac12;</dt> <dd>teaspoon salt, add to cooker</dd>
               <dt style="background:#180a0a;color:#ffffff"><b>Step 2</b></dt><dd style="background:#ffffff">&nbsp;</dd>
               <dt>1</dt> <dd>tablespoon ghee</dd>
-              <dt>&frac15</dt> <dd>teaspoon asafoetida/heeng</dd>
-              <dt>&frac12</dt> <dd>teaspoon jeeras</dd>
+              <dt>&frac15;</dt> <dd>teaspoon asafoetida/heeng</dd>
+              <dt>&frac12;</dt> <dd>teaspoon jeera</dd>
               <dt>&frac14;</dt> <dd>teaspoon turmeric</dd>
               <dt>&frac14;</dt> <dd>teaspoon red chilli powder- as per taste, even optional</dd>
               <dt>5</dt> <dd>cloves, crush using mortar</dd>
