--- a/vegetarian/moong-dal.html
+++ b/vegetarian/moong-dal.html
@@ -103,13 +103,13 @@
           <div class="recipe-ingredients">
             <h3>Ingredients</h3>
             <dl class="ingredients-list">
-              <dt style="background:#180a0a;color:#ffffff"><b>Step 1</b></dt><dd style="background:#ffffff">&nbsp;</dd>
+              <dt style="background:#180a0a;color:#ffffff"><b>Step1</b></dt><dd style="background:#ffffff"> </dd>
               <dt>1</dt> <dd>cup whole moong dal</dd>
               <dt>6</dt> <dd> hours soak moong dal in water an drain it</dd>
               <dt>2&frac14;</dt> <dd>cups water to drained moong dal, add to cooker</dd>
-              <dt>&frac14;</dt> <dd>teaspoon turmeric, add to cooker</dd>
+              <dt>&frac14;</dt> <dd>teaspoon turmeric, add to cooker</dd>;
               <dt>&frac12;</dt> <dd>teaspoon salt, add to cooker</dd>
-              <dt style="background:#180a0a;color:#ffffff"><b>Step 2</b></dt><dd style="background:#ffffff">&nbsp;</dd>
+              <dt style="background:#180a0a;color:#ffffff"><b>Step2</b></dt><dd style="background:#ffffff"> </dd>
               <dt>1</dt> <dd>tablespoon ghee</dd>
               <dt>&frac15;</dt> <dd>teaspoon asafoetida/heeng</dd>
               <dt>&frac12;</dt> <dd>teaspoon jeera</dd>
@@ -134,13 +134,13 @@
           <div class="recipe-directions">
             <h3>Directions</h3>
             <ol>
-              <li><b>Follow Step 1.</b> Pressure cook on medium to high flame for 1 whistle.
+              <li><b>Follow Step1.</b> Pressure cook on medium to high flame for 1 whistle.
                 Then on low flame for 3 minutes. Wait for cooker to cool down before you open it.</li>
               <li><b>Follow ingredients in Step2.</b> Heat the wok, add 1 table spoon ghee</li>
               <li>Add item from step2 into wok-  heeng, jeera, chilli, coriander, cloves, pepper, split geen chilli, grated ginger.</li>
               <li>Add grated onion and add 1/2 table spoon salt. Cook all the items in the wok well, till it starts leaving oil.</li>
               <li>Add the pureed tomatoes, cook it well</li>
-              <li>Add the prepared dal from Step 1</li>
+              <li>Add the prepared dal from Step1</li>
               <li> boil the dal in high flame for 2-3 minutes</li>
               <li>Add the optional milk and give one boil</li>
               <li>Add garam masala and mix it well, give one quik boil. Garnish coriander</li>
