--- a/vegetarian/moong-dal.html
+++ b/vegetarian/moong-dal.html
@@ -105,10 +105,10 @@
             <dl class="ingredients-list">
               <dt style="background:#180a0a;color:#ffffff"><b>Step1</b></dt><dd style="background:#ffffff"> </dd>
               <dt>1</dt> <dd>cup whole moong dal</dd>
-              <dt>6</dt> <dd> hours soak moong dal in water an drain it</dd>
-              <dt>2&frac14;</dt> <dd>cups water to drained moong dal, add to cooker</dd>
-              <dt>&frac14;</dt> <dd>teaspoon turmeric, add to cooker</dd>;
-              <dt>&frac12;</dt> <dd>teaspoon salt, add to cooker</dd>
+              <dt>6</dt> <dd> For 6 hours soak moong dal in water and then drain it, and add to pressure cooker</dd>
+              <dt>2&frac14;</dt> <dd>cups water add to cooker</dd>
+              <dt>&frac14;</dt> <dd>teaspoon turmeric add to cooker</dd>
+              <dt>&frac12;</dt> <dd>teaspoon salt add to cooker</dd>
               <dt style="background:#180a0a;color:#ffffff"><b>Step2</b></dt><dd style="background:#ffffff"> </dd>
               <dt>1</dt> <dd>tablespoon ghee</dd>
               <dt>&frac15;</dt> <dd>teaspoon asafoetida/heeng</dd>
@@ -122,7 +122,7 @@
               <dt>&frac14;</dt> <dd>teaspoon garam masala</dd>
               <dt>&frac14;</dt> <dd>cup milk - optional</dd>
               <dt>2</dt> <dd>inch ginger, grate it</dd>
-              <dt>1</dt> <dd>big onion , grate it</dd>
+              <dt>1</dt> <dd>big onion, grate it</dd>
               <dt>3</dt> <dd>medium sized tomatoes, puree/grind it</dd>
             </dl>
           </div>
