--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <!-- Third recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#" style="width:100%;background-color: #1b662c;" class="btn btn-success" role="button">
+            <a href="vegetarian/rasam.html" style="width:100%;background-color: #1b662c;" class="btn btn-success" role="button">
               <h3>Rasam</h3>
             </a>
         </div>
