Rasam, sambar and tamrind chilli

--- a/index.html
+++ b/index.html
@@ -173,17 +173,17 @@
             </a>
         </div>
         <!-- Seventh recipe item -->
-<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
-<!--            <a href="#"  style="width:100%;" class="btn btn-primary" role="button"  style="width:100%">-->
-<!--              <h3>Barbecue Pork Ribs</h3>-->
-<!--            </a>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; Eight recipe item &ndash;&gt;-->
-<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
-<!--            <a href="recipe.html"  style="width:100%;" class="btn btn-secondary" role="button"  style="width:100%">-->
-<!--              <h3>Barbecue Pork Ribs</h3>-->
-<!--            </a>-->
-<!--        </div>-->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="vegetarian/sambar.html"  style="width:100%;" class="btn btn-primary" role="button"  style="width:100%">
+              <h3>sambar</h3>
+            </a>
+        </div>
+        <!-- Eight recipe item -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="vegetarian/tamrind-chilli.html"  style="width:100%;" class="btn btn-secondary" role="button"  style="width:100%">
+              <h3>Tamrind Chilli</h3>
+            </a>
+        </div>
 <!--        &lt;!&ndash; Ninth recipe item &ndash;&gt;-->
 <!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
 <!--            <a href="recipe.html"  style="width:100%;"  class="btn btn-success" role="button"  style="width:100%">-->
