added wrap text for html tag <pre>

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <!-- Seventh recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
             <a href="vegetarian/sambar.html"  style="width:100%;" class="btn btn-primary" role="button"  style="width:100%">
-              <h3>sambar</h3>
+              <h3>Sambar</h3>
             </a>
         </div>
         <!-- Eight recipe item -->
