--- a/vegetarian/rasam.html
+++ b/vegetarian/rasam.html
@@ -17,21 +17,20 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <pre>
-                Rasam:
-                    Take tamarind size of lemon
-                    Start heating  tamarind water
-                    Add the following :
-                    Grind 2 tomatoes and add to that
-                    Asafoetida and salt
-                    Heat for 5 mts
-                    Add 2 spoons of rasam powder
-                    Heat for 5 mts
-                    Add dhal water
-                    Heat till bubbles form on top
-                    Add seasoning in ghee with mustard and jeera
-                    Add coriander leaves
-
+               <pre  style="white-space: pre-wrap; word-break: keep-all;">
+Rasam:
+    Take tamarind size of lemon
+    Start heating  tamarind water
+    Add the following :
+    Grind 2 tomatoes and add to that
+    Asafoetida and salt
+    Heat for 5 mts
+    Add 2 spoons of rasam powder
+    Heat for 5 mts
+    Add dhal water
+    Heat till bubbles form on top
+    Add seasoning in ghee with mustard and jeera
+    Add coriander leaves
                 </pre>
             </div>
             <!-- Back to recipes -->
