--- a/vegetarian/sambar.html
+++ b/vegetarian/sambar.html
@@ -17,86 +17,86 @@
         </div>
         <div class="row">
             <div class="col-12">
-    <pre>
-    Ingredients for sambar recipe
-        ¾ cup Toor dal (or split pigeon peas) (refer notes)
-        1 to 2 tablespoon Tamarind or tamarind paste as needed, tamrind size of lemon
-        ¼ cup Coriander leaves few with tender stalks – chopped
-        salt as needed
-        1/8 teaspoon turmeric (skip if your sambar powder has it)
+    <pre  style="white-space: pre-wrap; word-break: keep-all;">
+Ingredients for sambar recipe
+    ¾ cup Toor dal (or split pigeon peas) (refer notes)
+    1 to 2 tablespoon Tamarind or tamarind paste as needed, tamrind size of lemon
+    ¼ cup Coriander leaves few with tender stalks – chopped
+    salt as needed
+    1/8 teaspoon turmeric (skip if your sambar powder has it)
 
-    Vegetables for sambar
-        12 to 15 shallots (or small onions) or 1 medium onion sliced, refer notes
-        1 to 2 vegetable drumsticks (or moringa)
-        2 to 3 Ladies finger (or okra, bhindi)
-        3 to 4 cubed red pumpkin pieces (optional)
-        1 green chili slit (optional)
-        1 medium tomato chopped
+Vegetables for sambar
+    12 to 15 shallots (or small onions) or 1 medium onion sliced, refer notes
+    1 to 2 vegetable drumsticks (or moringa)
+    2 to 3 Ladies finger (or okra, bhindi)
+    3 to 4 cubed red pumpkin pieces (optional)
+    1 green chili slit (optional)
+    1 medium tomato chopped
 
-    Steps to make sambar powder or you can use the ready made powder:
-        1 tablespoon coriander seeds (or daniya)
-        1 tablespoon Chana dal (or skinned split bengal gram)
-        1 teaspoon urad dal (or skinned split black gram)
-        ½ teaspoon cumin (or jeera)
-        ¼ to ½ teaspoon methi seeds (or fenugreek seeds)
-        4 to 5 red chilies (kashmiri or byadgi) (less spicy variety)
-        tempering or tadka for sambar recipe
-        2 teaspoon ghee or oil
-        1 sprig curry leaves
-        ½ teaspoon cumin (or jeera)
-        ½ teaspoon mustard seeds
-        1 Pinch methi seeds or fenugreek seeds
-        2 pinches asafoetida or hing
-        1 Red chili broken (less spicy variety)
+Steps to make sambar powder or you can use the ready made powder:
+    1 tablespoon coriander seeds (or daniya)
+    1 tablespoon Chana dal (or skinned split bengal gram)
+    1 teaspoon urad dal (or skinned split black gram)
+    ½ teaspoon cumin (or jeera)
+    ¼ to ½ teaspoon methi seeds (or fenugreek seeds)
+    4 to 5 red chilies (kashmiri or byadgi) (less spicy variety)
+    tempering or tadka for sambar recipe
+    2 teaspoon ghee or oil
+    1 sprig curry leaves
+    ½ teaspoon cumin (or jeera)
+    ½ teaspoon mustard seeds
+    1 Pinch methi seeds or fenugreek seeds
+    2 pinches asafoetida or hing
+    1 Red chili broken (less spicy variety)
 
-    HOW TO MAKE THE RECIPE:
-        Preparation for sambar recipe
-        Wash toor dal a few times in cooker or pot until the water runs clear.
-        Pour 2 cups water & pressure cook on a medium heat for 2 to 4 whistles depending on the brand of cooker.
-        The dal needs to be cooked till smooth. It can even be cooked in a pot.
-        Rinse all the veggies. Scrape the drumsticks lightly & rinse. Chop them to 2 inch pieces.
-        Peel the shallots as well & rinse.
-        Chop tomatoes & okra to 1 inch pieces. If using pumpkin peel the skin & dice them. Set aside.
-        Make sambar powder – Skip this if you have the powder
-        While the dal cooks, make the sambar powder. Dry roast red chilies, urad dal and chana dal until golden & crisp. Add coriander seeds & fry till aromatic. Remove to a plate.
-        Next add methi seeds and saute until slightly dark. Then add cumin, fry for a minute. Cool these and powder finely.
-        How to make sambar
-        Pour 5 cups of water to a pot, add the chopped veggies.
-        Cook on a medium flame until the veggies are soft cooked yet hold their shape.
-        The flavor & taste of sambar is good when the veggies are soft cooked as all the flavor comes out to the stock.
-        optional – You can also saute all the veggies in a tsp of oil until the flavor comes – for 3 to 5 mins. If using brinjal then saute it first for 3 to 4 mins to bring out flavor.
-        When the water turns slightly hot, transfer about ¼ cup hot water with a ladle to a separate bowl and soak tamarind in it.
-        When the pressure goes off, mash the dal to smooth.
-        The dal needs to be very smooth otherwise the taste of the sambar alters within a few hours.
-        When the vegetables are completely cooked, add sambhar powder, turmeric & salt.
-        Cook for 3 to 5 minutes. Pour the tamarind pulp, filter if you desire.
-        Add smooth dal, mix well to blend the dal with water. Bring it to a boil.
-        Check if there is enough salt & sourness. If needed add more. Add coriander leaves & stir.
-        Tempering sambar
-        Meanwhile, heat another pan with oil or ghee.
-        Add mustard, cumin & methi. When they begin to sizzle, add curry leaves, broken red chili.
-        When the leaves turn crisp, off the heat add hing. You can also add 1/8 to 1/4 tsp of sambar powder to the hot pan.
-        Quickly pour this seasoning to the sambar. Stir well. Simmer for 2 to 3 minutes for the sambar to become flavorful.
-        We usually pour 2 to 3 ladles of sambhar to the tempering pan as the aroma of the tempering will be great this way.
-        Tips for refrigerating
-        Stir well. Set aside the desired portion to refrigerate in smaller containers.
-        Cool completely and refrigerate immediately. To retain the taste of sambar, it is suggested to refrigerate within two hours of cooking.
-        It keeps good for about 2 days. Bring it to a boil whenever needed.
-        A fresh tadka for the refrigerated dish makes it smell and taste fresh.
-        Serve sambar with rice, idli, vada or dosa.
+HOW TO MAKE THE RECIPE:
+    Preparation for sambar recipe
+    Wash toor dal a few times in cooker or pot until the water runs clear.
+    Pour 2 cups water & pressure cook on a medium heat for 2 to 4 whistles depending on the brand of cooker.
+    The dal needs to be cooked till smooth. It can even be cooked in a pot.
+    Rinse all the veggies. Scrape the drumsticks lightly & rinse. Chop them to 2 inch pieces.
+    Peel the shallots as well & rinse.
+    Chop tomatoes & okra to 1 inch pieces. If using pumpkin peel the skin & dice them. Set aside.
+    Make sambar powder – Skip this if you have the powder
+    While the dal cooks, make the sambar powder. Dry roast red chilies, urad dal and chana dal until golden & crisp. Add coriander seeds & fry till aromatic. Remove to a plate.
+    Next add methi seeds and saute until slightly dark. Then add cumin, fry for a minute. Cool these and powder finely.
+    How to make sambar
+    Pour 5 cups of water to a pot, add the chopped veggies.
+    Cook on a medium flame until the veggies are soft cooked yet hold their shape.
+    The flavor & taste of sambar is good when the veggies are soft cooked as all the flavor comes out to the stock.
+    optional – You can also saute all the veggies in a tsp of oil until the flavor comes – for 3 to 5 mins. If using brinjal then saute it first for 3 to 4 mins to bring out flavor.
+    When the water turns slightly hot, transfer about ¼ cup hot water with a ladle to a separate bowl and soak tamarind in it.
+    When the pressure goes off, mash the dal to smooth.
+    The dal needs to be very smooth otherwise the taste of the sambar alters within a few hours.
+    When the vegetables are completely cooked, add sambhar powder, turmeric & salt.
+    Cook for 3 to 5 minutes. Pour the tamarind pulp, filter if you desire.
+    Add smooth dal, mix well to blend the dal with water. Bring it to a boil.
+    Check if there is enough salt & sourness. If needed add more. Add coriander leaves & stir.
+    Tempering sambar
+    Meanwhile, heat another pan with oil or ghee.
+    Add mustard, cumin & methi. When they begin to sizzle, add curry leaves, broken red chili.
+    When the leaves turn crisp, off the heat add hing. You can also add 1/8 to 1/4 tsp of sambar powder to the hot pan.
+    Quickly pour this seasoning to the sambar. Stir well. Simmer for 2 to 3 minutes for the sambar to become flavorful.
+    We usually pour 2 to 3 ladles of sambhar to the tempering pan as the aroma of the tempering will be great this way.
+    Tips for refrigerating
+    Stir well. Set aside the desired portion to refrigerate in smaller containers.
+    Cool completely and refrigerate immediately. To retain the taste of sambar, it is suggested to refrigerate within two hours of cooking.
+    It keeps good for about 2 days. Bring it to a boil whenever needed.
+    A fresh tadka for the refrigerated dish makes it smell and taste fresh.
+    Serve sambar with rice, idli, vada or dosa.
 
-    Notes:
-        For dal – you can use a mix of
-        Toor (split skinned pigeon peas)
-        Moong (skinned split mung beans or green gram)
-        Masoor (skinned split red lentils)
-        Do not add tamarind before the veggies are cooked completely.
-        Do not overcook the dal, as the taste of dal diminishes. Add it only after the veggies are cooked. This way dal is not overcooked and sambhar tastes the best.
-        Make sure dal is very smooth. In some parts of south India, dal is ground to smooth and then used.
-        If you do not have shallots you can use 3 small (lemon sized) to 1 medium sized (halved) onions. The sambar will get some sweet flavor but tastes good.
+Notes:
+    For dal – you can use a mix of
+    Toor (split skinned pigeon peas)
+    Moong (skinned split mung beans or green gram)
+    Masoor (skinned split red lentils)
+    Do not add tamarind before the veggies are cooked completely.
+    Do not overcook the dal, as the taste of dal diminishes. Add it only after the veggies are cooked. This way dal is not overcooked and sambhar tastes the best.
+    Make sure dal is very smooth. In some parts of south India, dal is ground to smooth and then used.
+    If you do not have shallots you can use 3 small (lemon sized) to 1 medium sized (halved) onions. The sambar will get some sweet flavor but tastes good.
 
-    Reference:
-        https://www.indianhealthyrecipes.com/andhra-sambar-recipe-how-to-make-south-indian-sambar
+Reference:
+    https://www.indianhealthyrecipes.com/andhra-sambar-recipe-how-to-make-south-indian-sambar
     </pre>
             </div>
             <!-- Back to recipes -->
