--- a/vegetarian/tamrind-chilli.html
+++ b/vegetarian/tamrind-chilli.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Mulaga Puli | Cookbook</title>
+    <link rel="stylesheet" type="text/css" href="css/pre-format.css" />
 </head>
 <body>
 <section id="recipe">
@@ -17,19 +18,19 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <pre>
-                Mulaga Puli:
-                    - 1 cup puli
-                    - 3 cup split chilies
-                    - Asafodeta
-                    - Salt
-                    - Oil
-                    - Sml Amt jaggery
-                    - Turmeric
-                        Put mustard seed in oil, then put split urad dal. Enough oil to cook chilies like we cook onion - no need to roast like onion
-                        Put puli water, add turmeric, salt .
-                        Asofodeta and jaggery and cook well
-                    - 1/2 to 1 teaspoon methi and sesame seed, dry roast, powder it and add it at the end
+                <pre  style="white-space: pre-wrap; word-break: keep-all;">
+Mulaga Puli:
+    - 1 cup puli
+    - 3 cup split chilies
+    - Asafodeta
+    - Salt
+    - Oil
+    - Sml Amt jaggery
+    - Turmeric
+        Put mustard seed in oil, then put split urad dal. Enough oil to cook chilies like we cook onion - no need to roast like onion
+        Put puli water, add turmeric, salt .
+        Asofodeta and jaggery and cook well
+    - 1/2 to 1 teaspoon methi and sesame seed, dry roast, powder it and add it at the end
                 </pre>
             </div>
             <!-- Back to recipes -->
