boondi and peanut ladoo added

--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
       <div class="row">
         <!-- First recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#"  style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+            <a href="snacks/boondi-ladoo.html"  style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
 <!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
                           <h3>Boondi Ladoo</h3>
             </a>
         </div>
         <!-- Second recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#" style='width:100%;background-color:#a3276e' class="btn btn-primary" role="button" >
+            <a href="snacks/peanut-ladoo.html" style='width:100%;background-color:#a3276e' class="btn btn-primary" role="button" >
 <!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
                 <h3>Peanut Ladoo</h3>
             </a>
