opening reference link into a new windows

--- a/snacks/boondi-ladoo.html
+++ b/snacks/boondi-ladoo.html
@@ -77,7 +77,7 @@ To get the perfect consistency, add room temp water to the thick bubbly syrup. F
           <div class="recipe-directions">
             <h3>Directions</h3>
             <ol>
-              <li> <a href="https://www.youtube.com/watch?v=9eWzm7uwAyQ">How to steps in detail</a></li>
+              <li> <a href="https://www.youtube.com/watch?v=9eWzm7uwAyQ" target="_blank">How to steps in detail</a></li>
             </ol>
           </div>
         </div>
