--- a/snacks/kaju-katli.html
+++ b/snacks/kaju-katli.html
@@ -132,7 +132,7 @@ It's important to roll the dough while it's still warm or it may begin to crumbl
               <li><b>Cut the dough into 20 equal-sized diamonds.</b> If you didn't apply the silver leaves, peel off the top layer of parchment that's covering the dough. Take a sharp knife and trim the sides of the dough to make a large diamond. Cut 4 diagonal rows across the dough. Then cut 4 more rows in the opposite direction to create diamonds.[10]
 You should get about 20 pieces, depending on the size of dough you rolled out.</li>
               <li><b>Serve the kaju katli.</b> Separate each of the diamonds and place the kaju katli on a decorative serving plate. Enjoy them at room temperature or store them in an airtight container. You can store them for up to 9 days at room temperature or refrigerate them for up to 1 month</li>
-              <li> <a href="https://www.wikihow.com/Make-Kaju-Katli">Recipe reference</a></li>
+              <li> <a href="https://www.wikihow.com/Make-Kaju-Katli" target="_blank">Recipe reference</a></li>
             </ol>
           </div>
         </div>
