--- a/snacks/peanut-ladoo.html
+++ b/snacks/peanut-ladoo.html
@@ -116,7 +116,7 @@
           <div class="recipe-directions">
             <h3>Directions</h3>
             <ol>
-              <li> <a href="https://www.mrishtanna.com/sweet-peanut-balls-peanut-jaggery-ladoo-recipe/">How to steps in detail</a></li>
+              <li> <a href="https://www.mrishtanna.com/sweet-peanut-balls-peanut-jaggery-ladoo-recipe/" target="_blank">How to steps in detail</a></li>
             </ol>
           </div>
         </div>
