--- a/vegetarian/sambar.html
+++ b/vegetarian/sambar.html
@@ -94,11 +94,19 @@ Notes:
     Do not overcook the dal, as the taste of dal diminishes. Add it only after the veggies are cooked. This way dal is not overcooked and sambhar tastes the best.
     Make sure dal is very smooth. In some parts of south India, dal is ground to smooth and then used.
     If you do not have shallots you can use 3 small (lemon sized) to 1 medium sized (halved) onions. The sambar will get some sweet flavor but tastes good.
-
-Reference:
-    https://www.indianhealthyrecipes.com/andhra-sambar-recipe-how-to-make-south-indian-sambar
     </pre>
             </div>
+          <!-- Directions -->
+          <div class="row wow slideInUp">
+            <div class="col-12">
+              <div class="recipe-directions">
+                <h3>Directions</h3>
+                <ol>
+                  <li> <a href="https://www.indianhealthyrecipes.com/andhra-sambar-recipe-how-to-make-south-indian-sambar" target="_blank">How to steps in detail</a></li>
+                </ol>
+              </div>
+            </div>
+          </div>
             <!-- Back to recipes -->
             <div class="row wow rollIn">
                 <div class="col-12 text-center">
